@@ -1,3 +1,7 @@
+2013-08-05  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* use stock items for most buttons
+
 2013-08-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* describe prooftree notification messages and other doc fixes
